<resources>
    <string name="app_name">Rock Paper Scissors</string>
    <string name="computer_choice">Computer\'s choice</string>
    <string name="user_choice">Your choice</string>
    <string name="choose_strength">Choose your strength:</string>
    <string name="view_result">View result</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_second_activty">SecondActivty</string>
    <string name="user_score">User score</string>
    <string name="computer_score">Computer score</string>

</resources>